--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "paracom"
+name = "pilcrow"
 dynamic = ["version"]
 description = 'Use an LLM to detect conversation turns in a transcript and insert blank lines as paragraph breaks.'
 readme = "README.md"
@@ -29,10 +29,10 @@ dependencies = [
 ]
 
 [tool.hatch.version]
-path = "src/paracom/__about__.py"
+path = "src/pilcrow/__about__.py"
 
 [project.scripts]
-paracom = "paracom:main"
+pilcrow = "pilcrow:main"
 
 [project.urls]
-repository = "https://github.com/tos-kamiya/paracom"
+repository = "https://github.com/tos-kamiya/pilcrow"
